--- a/flutter_products/pubspec.yaml
+++ b/flutter_products/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   provider: ^6.0.0
   adaptive_theme: ^2.2.0
   flutter_riverpod: ^0.14.0+3
+  image_picker: ^1.0.5
+  google_mlkit_text_recognition: ^0.8.1
+  flutter_tesseract_ocr: ^0.4.23
 
   english_words: ^4.0.0
   injectable: ^2.1.2
